--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,6 @@ android {
         targetSdk 33
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
             useSupportLibrary true
@@ -35,6 +34,7 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.compose.ui:ui-test:1.1.1'
     kapt "androidx.room:room-compiler:2.5.0"
     implementation project(":common")
 
