--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 buildscript {
     ext {
-        compose_version = '1.2.0'
+        compose_version = '1.3.0'
+        koin_version = '3.2.0'
+        lifecycle_version = '2.5.0'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
