--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,11 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/gpt_icon"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/gpt_icon_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Chatgpt"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
