1.优化图标 2.删除优化

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.jun.chatgpt"
+        applicationId "com.jun.chatgpt2"
         minSdk 21
         targetSdk 33
         versionCode 2
