--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.jun.chatgpt2"
+        applicationId "com.jun.chatgpmutli"
         minSdk 21
         targetSdk 33
         versionCode 2
